--- a/source/compatibility.tex
+++ b/source/compatibility.tex
@@ -1605,7 +1605,7 @@ The following \Cpp{} headers are new:
 \libheaderrefx{system_error}{system.error.syn},
 \libheaderref{thread},
 \libheaderref{tuple},
-\libheaderrefx{type\-index}{type.index.synopsis},
+\libheaderrefx{typeindex}{type.index.synopsis},
 \libheaderrefx{type_traits}{meta.type.synop},
 \libheaderrefx{unordered_map}{unord.map.syn},
 and
